Content change and Color contrast correction

--- a/tailwindcss.pcss
+++ b/tailwindcss.pcss
@@ -1,54 +1,67 @@
-@import url('https://fonts.googleapis.com/css2?family=Manrope:wght@200;300;400;500;600;700;800&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Carter+One&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Manrope:wght@200;300;400;500;600;700;800&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Carter+One&display=swap");
 
 :root {
-  --color-bg-primary: #FFFFFF;
-  --color-bg-secondary: #F7FAFC;
-  --color-bg-tertiary: #EBF8FF;
-  --color-bg-default: #4299E1;
+  --color-bg-primary: #ffffff;
+  --color-bg-secondary: #f7fafc;
+  --color-bg-tertiary: #ebf8ff;
+  --color-bg-default: #0039cb;
 
-  --color-text-primary: #1A202C;
-  --color-text-secondary: #4A5568;
-  --color-text-tertiary: #4299E1;
-  --color-text-default: #FFFFFF;
+  --color-text-primary: #1a202c;
+  --color-text-secondary: #4a5568;
+  --color-text-tertiary: #1c54b2;
+  --color-text-default: #ffffff;
 
-  --color-btn-primary: #EDF2F7;  
-  --color-btn-secondary: #E2E8F0;
-  --color-btn-default: #3182CE;
-   
-  --color-border-primary: #E2E8F0;
-  --color-border-secondary: #CBD5E0;
+  --color-btn-primary: #edf2f7;
+  --color-btn-secondary: #e2e8f0;
+  --color-btn-default: #2962ff;
 
-  --font-display: 'Helvetica Neue', Helvetica, Arial, sans-serif;
-  --font-body: 'Helvetica Neue', Helvetica, Arial, sans-serif;
+  --color-border-primary: #e2e8f0;
+  --color-border-secondary: #cbd5e0;
+  
 }
 
 /** purgecss start ignore */
 .theme-dark {
-  --color-bg-primary: #1A202C;
-  --color-bg-secondary: #2D3748;
-  --color-bg-tertiary: #2D3748;
-  --color-bg-default: #4299E1;
+  --color-bg-primary: #1a202c;
+  --color-bg-secondary: #2d3748;
+  --color-bg-tertiary: #2d3748;
+  --color-bg-default: #83b9ff;
 
-  --color-text-primary: #FFFFFF;
-  --color-text-secondary: #A0AEC0;
-  --color-text-tertiary: #63B3ED;
-  --color-text-default: #FFFFFF;
+  --color-text-primary: #ffffff;
+  --color-text-secondary: #a0aec0;
+  --color-text-tertiary: #63b3ed;
+  --color-text-default: #000000;
 
-  --color-btn-primary: #2D3748;  
-  --color-btn-secondary: #4A5568;
-  --color-btn-default: #3182CE;
- 
-  --color-border-primary: #2D3748;
-  --color-border-secondary: #4A5568;
- 
+  --color-btn-primary: #2d3748;
+  --color-btn-secondary: #4a5568;
+  --color-btn-default: #448aff;
+
+  --color-border-primary: #2d3748;
+  --color-border-secondary: #4a5568;
 }
 /** purgecss end ignore */
 
+.st0 {
+  fill: #0acf83;
+}
+.st1 {
+  fill: #a259ff;
+}
+.st2 {
+  fill: #f24e1e;
+}
+.st3 {
+  fill: #ff7262;
+}
+.st4 {
+  fill: #1abcfe;
+}
+
+html {
+  scroll-behavior: smooth;
+}
 
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
-
-
-
